--- a/Market_Mang/src/main/resources/application.properties
+++ b/Market_Mang/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SpringDB;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MarketDB;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=root
 spring.jpa.show-sql=true
